// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`.cypressRunner calls sauce reporter and returns a job status 1`] = `
Array [
  Array [
    Object {
      "cypress": Object {
        "configFile": "fake-cypress.json",
      },
      "path": "/fake/runner/path",
      "resultsDir": "/fake/runner/__assets__",
      "suites": Array [
        Object {
          "config": Object {
            "env": Object {
              "HELLO": "WORLD",
            },
          },
          "name": "fake-suite",
          "platformName": "Windows 10",
        },
      ],
    },
    "fake-suite",
    "firefox",
    Array [
      "spec-a",
      "spec-b",
    ],
    Array [],
    "Date: 1",
    "Date: 2",
  ],
]
`;

exports[`.cypressRunner can call Cypress.run with basic args 1`] = `
Array [
  Array [
    Object {
      "browser": "chrome",
      "config": Object {
        "env": Object {
          "HELLO": "WORLD",
        },
        "reporter": "MultiReporters.js",
        "reporterOptions": Object {
          "configFile": "sauce-reporter-config.json",
        },
        "screenshotsFolder": "/fake/runner/__assets__",
        "testFiles": undefined,
        "video": undefined,
        "videoCompression": false,
        "videoUploadOnPasses": false,
        "videosFolder": "/fake/runner/__assets__",
      },
      "configFile": "fake-cypress.json",
      "headed": true,
      "headless": false,
      "project": "/fake/runner",
    },
  ],
]
`;

exports[`.cypressRunner can call Cypress.run with basic args 2`] = `
Array [
  Array [
    Array [
      "spec-a",
      "spec-b",
    ],
    "/fake/runner/__assets__",
    Array [
      "some metricz",
    ],
    "fake-suite",
    "chrome",
    "Windows 10",
  ],
]
`;

exports[`.cypressRunner can call Cypress.run with timeout 0 1`] = `
Array [
  Array [
    Object {
      "browser": "chrome",
      "config": Object {
        "env": Object {
          "HELLO": "WORLD",
        },
        "reporter": "MultiReporters.js",
        "reporterOptions": Object {
          "configFile": "/Users/valentynkremeshnyi/saucelabs/sauce-cypress-runner/sauce-reporter-config.json",
        },
        "screenshotsFolder": "/fake/runner/__assets__",
        "testFiles": undefined,
        "video": undefined,
        "videoCompression": false,
        "videoUploadOnPasses": false,
        "videosFolder": "/fake/runner/__assets__",
      },
      "configFile": "fake-cypress.json",
      "headed": true,
      "headless": false,
      "project": "/fake/runner",
    },
  ],
]
`;

exports[`.cypressRunner can call Cypress.run with timeout 0 2`] = `
Array [
  Array [
    Array [],
    "/fake/runner/__assets__",
    Array [
      "some metricz",
    ],
    "fake-suite",
    "chrome",
    "Windows 10",
  ],
]
`;

exports[`.cypressRunner from SAUCE VM should take config.env as argument (DEVX-477) 1`] = `
Array [
  Array [
    Object {
      "browser": "chrome",
      "config": Object {
        "env": Object {
          "HELLO": "WORLD",
        },
        "reporter": "MultiReporters.js",
        "reporterOptions": Object {
          "configFile": "sauce-reporter-config.json",
        },
        "screenshotsFolder": "/fake/runner/__assets__",
        "testFiles": undefined,
        "video": undefined,
        "videoCompression": false,
        "videoUploadOnPasses": false,
        "videosFolder": "/fake/runner/__assets__",
      },
      "configFile": "fake-cypress.json",
      "headed": true,
      "headless": false,
      "project": "/fake/runner",
    },
  ],
]
`;
